simplify teleport and spawnpoint